--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,177 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
+
 <body>
 
-  <header></header>
+  <div>
 
-  <main>
+    <header>
+      <nav>
+        <ul>
+          <li>Информация</li>
+          <li>Фото и видео</li>
+          <li>Главная</li>
+          <li>Карта штата</li>
+          <li>Гостиницы</li>
+        </ul>
+      </nav>
+    </header>
 
-    <section></section>
+    <main>
 
-  </main>
+      <h1>Сайт туристического городка Sedona</h1>
 
-  <footer></footer>
+      <section>
+        <h2>Логотип-приветствие посетителя</h2>
+        <img src=""
+          alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
+      </section>
+
+      <section>
+        <h2>Преимущества отдыха в Седоне</h2>
+        <p>Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+
+        <div>
+          <h3>Преимущество №1</h3>
+          <div>
+            <p>Настоящий городок</p>
+            <p>№1</p>
+            <p>Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</p>
+          </div>
+          <div>
+            <img src="" alt="Фото кафе на территории Седоны">
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <img src="" alt="Иконка в виде домика">
+            <p>Жильё</p>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </div>
+          <div>
+            <img src="" alt="Иконка в виде бургера">
+            <p>Еда</p>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </div>
+          <div>
+            <img src="" alt="Иконка в виде подарочной коробки">
+            <p>Сувениры</p>
+            <p>Не только китайского, но и местного производства!</p>
+          </div>
+        </div>
+
+        <div>
+          <h3>Преимущество №2</h3>
+          <div>
+            <img src="" alt="Фото Моста дьявола">
+          </div>
+          <div>
+            <p>Там есть<br>мост дьявола</p>
+            <p>№2</p>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <h3>Преимущество №3</h3>
+            <p>Небольшая<br>площадь</p>
+            <p>№3</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </div>
+          <div>
+            <h3>Преимущество №4</h3>
+            <p>Красивая<br>дорога</p>
+            <p>№4</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+          <div>
+            <h3>Преимущество №5</h3>
+            <p>Мало<br>туристов</p>
+            <p>№5</p>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <h2>Поиск гостиницы в Седоне</h2>
+
+        <p>Заинтересовались?</p>
+
+        <p>Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне </p>
+
+        <button type="button">Поиск гостиницы в Седоне</button>
+
+        <div>
+          <form action="https://echo.htmlacademy.ru" method="POST">
+            <div>
+              <label for="start-date">
+                Дата заезда:
+              </label>
+              <input type="date" id="start-date" name="start-date" value="2020-06-10" required>
+            </div>
+            <div>
+              <label for="end-date">
+                Дата выезда:
+              </label>
+              <input type="date" id="end-date" name="end-date" value="2020-06-18" required>
+            </div>
+            <div>
+              <div>
+                <label for="adults-count">
+                  Взрослые:
+                </label>
+                <input type="number" id="adults-count" name="adults" value="2" min="1" max="100" required>
+              </div>
+              <div>
+                <label for="children-count">
+                  Дети:
+                </label>
+                <input type="number" id="children-count" name="children" value="1" min="1" max="100">
+              </div>
+            </div>
+            <button type="submit">Найти</button>
+          </form>
+        </div>
+
+        <img src="" alt="Расположение гостиниц на карте">
+
+      </section>
+
+    </main>
+
+    <footer>
+
+      <div>
+        <p>#VISITSEDONA</p>
+        <a href="tel:+7(495)495-49-54">+7(495)495-49-54</a>
+      </div>
+
+      <div>
+        <a href="#"><img src="" alt="Иконка Твиттер"></a>
+        <a href="#"><img src="" alt="Иконка Facebook"></a>
+        <a href="#"><img src="" alt="Иконка YouTube"></a>
+      </div>
+
+      <p>
+        <b>Вёрстка:</b>
+        <a href="https://github.com/vaivankov">Виталий Иваньков</a>
+      </p>
+
+    </footer>
+
+  </div>
 
   <!-- <script src="js/func__.js"></script> -->
   <script src="js/variables.js"></script>
   <script src="js/handlers.js"></script>
 
 </body>
+
 </html>
