--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 
     <main>
 
-      <h1>Сайт туристического городка Sedona</h1>
+      <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
 
       <section>
-        <h2>Логотип-приветствие посетителя</h2>
+        <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
         <img src=""
           alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
       </section>
 
       <section>
-        <h2>Преимущества отдыха в Седоне</h2>
+        <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
         <p>Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 
         <div>
-          <h3>Преимущество №1</h3>
+          <h3 class="visually-hidden">Преимущество №1</h3>
           <div>
             <p>Настоящий городок</p>
             <p>№1</p>
@@ -71,7 +71,7 @@
         </div>
 
         <div>
-          <h3>Преимущество №2</h3>
+          <h3 class="visually-hidden">Преимущество №2</h3>
           <div>
             <img src="" alt="Фото Моста дьявола">
           </div>
@@ -84,19 +84,19 @@
 
         <div>
           <div>
-            <h3>Преимущество №3</h3>
+            <h3 class="visually-hidden">Преимущество №3</h3>
             <p>Небольшая<br>площадь</p>
             <p>№3</p>
             <p>Все достопримечательности находятся очень близко</p>
           </div>
           <div>
-            <h3>Преимущество №4</h3>
+            <h3 class="visually-hidden">Преимущество №4</h3>
             <p>Красивая<br>дорога</p>
             <p>№4</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
           <div>
-            <h3>Преимущество №5</h3>
+            <h3 class="visually-hidden">Преимущество №5</h3>
             <p>Мало<br>туристов</p>
             <p>№5</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -107,7 +107,7 @@
 
       <section>
 
-        <h2>Поиск гостиницы в Седоне</h2>
+        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
         <p>Заинтересовались?</p>
 
