--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
 <body>
 
-  <div>
+  <div class="container">
 
-    <header>
-      <nav>
-        <ul>
-          <li>Информация</li>
-          <li>Фото и видео</li>
-          <li>Главная</li>
-          <li>Карта штата</li>
-          <li>Гостиницы</li>
+    <header class="header">
+      <nav class="main-navigation">
+        <ul class="navigation-list">
+          <li class="list-item-left">Информация</li>
+          <li class="list-item-left">Фото и видео</li>
+          <li class="navigation-logo">
+            <p class="visually-hidden">
+              Главная
+            </p>
+          </li>
+          <li class="list-item-right">Карта штата</li>
+          <li class="list-item-right">Гостиницы</li>
         </ul>
       </nav>
     </header>
@@ -29,13 +33,13 @@
 
       <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
 
-      <section>
+      <section class="main-logo">
         <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
         <img src=""
           alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
       </section>
 
-      <section>
+      <section class="main-features">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
         <p>Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -105,7 +109,7 @@
 
       </section>
 
-      <section>
+      <section class="main-hotels">
 
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
@@ -153,20 +157,20 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
 
-      <div>
+      <div class="footer-contacts">
         <p>#VISITSEDONA</p>
         <a href="tel:+7(495)495-49-54">+7(495)495-49-54</a>
       </div>
 
-      <div>
+      <div class="footer-socials">
         <a href="#"><img src="" alt="Иконка Твиттер"></a>
         <a href="#"><img src="" alt="Иконка Facebook"></a>
         <a href="#"><img src="" alt="Иконка YouTube"></a>
       </div>
 
-      <p>
+      <p class="footer-author">
         <b>Вёрстка:</b>
         <a href="https://github.com/vaivankov">Виталий Иваньков</a>
       </p>
