Добавлены классы стилизации на index.html

--- a/index.html
+++ b/index.html
@@ -11,164 +11,156 @@
 
 <body>
 
-  <div>
+  <div class="container">
 
-    <header>
-      <nav>
-        <ul>
-          <li>Информация</li>
-          <li>Фото и видео</li>
-          <li>Главная</li>
-          <li>Карта штата</li>
-          <li>Гостиницы</li>
+    <header class="header">
+      <nav class="main-navigation">
+        <ul class="navigation-list">
+          <li class="list-item-left">Информация</li>
+          <li class="list-item-left">Фото и видео</li>
+          <li class="navigation-logo"><p class="visually-hidden">Главная</p></li>
+          <li class="list-item-right">Карта штата</li>
+          <li class="list-item-right">Гостиницы</li>
         </ul>
       </nav>
     </header>
 
-    <main>
+    <main class="main">
 
       <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
 
-      <section>
+      <section class="main-logo">
         <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
         <img src=""
           alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
       </section>
 
-      <section>
+      <section class="main-features">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-        <p>Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <p class="main-features-title">Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
+        <p class="main-features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 
-        <div>
+        <div class="feature">
           <h3 class="visually-hidden">Преимущество №1</h3>
-          <div>
-            <p>Настоящий городок</p>
-            <p>№1</p>
-            <p>Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</p>
+          <div class="feature-card">
+            <p class="card-title">Настоящий городок</p>
+            <p class="card-num">№1</p>
+            <p class="card-text">Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</p>
           </div>
-          <div>
+          <div class="feature-img">
             <img src="" alt="Фото кафе на территории Седоны">
           </div>
         </div>
 
-        <div>
-          <div>
-            <img src="" alt="Иконка в виде домика">
-            <p>Жильё</p>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <div class="features-block">
+          <div class="feature-card">
+            <img class="card-icon" src="" alt="Иконка в виде домика">
+            <p class="card-title">Жильё</p>
+            <p class="card-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </div>
-          <div>
-            <img src="" alt="Иконка в виде бургера">
-            <p>Еда</p>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <div class="feature-card">
+            <img class="card-icon" src="" alt="Иконка в виде бургера">
+            <p class="card-title">Еда</p>
+            <p class="card-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
-          <div>
-            <img src="" alt="Иконка в виде подарочной коробки">
-            <p>Сувениры</p>
-            <p>Не только китайского, но и местного производства!</p>
+          <div class="feature-card">
+            <img class="card-icon" src="" alt="Иконка в виде подарочной коробки">
+            <p class="card-title">Сувениры</p>
+            <p class="card-text">Не только китайского, но и местного производства!</p>
           </div>
         </div>
 
-        <div>
+        <div class="feature">
           <h3 class="visually-hidden">Преимущество №2</h3>
-          <div>
+          <div class="feature-img">
             <img src="" alt="Фото Моста дьявола">
           </div>
-          <div>
-            <p>Там есть<br>мост дьявола</p>
-            <p>№2</p>
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <div class="feature-card">
+            <p class="card-title">Там есть<br>мост дьявола</p>
+            <p class="card-num">№2</p>
+            <p class="card-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
         </div>
 
-        <div>
-          <div>
+        <div class="features-block">
+          <div class="feature-card">
             <h3 class="visually-hidden">Преимущество №3</h3>
-            <p>Небольшая<br>площадь</p>
-            <p>№3</p>
-            <p>Все достопримечательности находятся очень близко</p>
+            <p class="card-title">Небольшая<br>площадь</p>
+            <p class="card-num">№3</p>
+            <p class="card-text">Все достопримечательности находятся очень близко</p>
           </div>
-          <div>
+          <div class="feature-card">
             <h3 class="visually-hidden">Преимущество №4</h3>
-            <p>Красивая<br>дорога</p>
-            <p>№4</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="card-title">Красивая<br>дорога</p>
+            <p class="card-num">№4</p>
+            <p class="card-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
-          <div>
+          <div class="feature-card">
             <h3 class="visually-hidden">Преимущество №5</h3>
-            <p>Мало<br>туристов</p>
-            <p>№5</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="card-title">Мало<br>туристов</p>
+            <p class="card-num">№5</p>
+            <p class="card-text">Большинство едет в Гранд Каньон и толпится там</p>
           </div>
         </div>
 
       </section>
 
-      <section>
+      <section class="main-hotels">
 
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
-        <p>Заинтересовались?</p>
+        <p class="hotels-title">Заинтересовались?</p>
 
-        <p>Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне </p>
+        <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне </p>
 
-        <button type="button">Поиск гостиницы в Седоне</button>
+        <button class="hotels-btn" type="button">Поиск гостиницы в Седоне</button>
 
-        <div>
-          <form action="https://echo.htmlacademy.ru" method="POST">
-            <div>
-              <label for="start-date">
-                Дата заезда:
-              </label>
-              <input type="date" id="start-date" name="start-date" value="2020-06-10" required>
+        <div class="form-wrapper">
+          <form class="form" action="https://echo.htmlacademy.ru" method="POST">
+            <div class="form-line">
+              <label class="line-label" for="start-date"> Дата заезда: </label>
+              <input class="line-input" type="date" id="start-date" name="start-date" value="2020-06-10" required>
             </div>
             <div>
-              <label for="end-date">
-                Дата выезда:
-              </label>
-              <input type="date" id="end-date" name="end-date" value="2020-06-18" required>
+              <label class="line-label" for="end-date"> Дата выезда: </label>
+              <input class="line-input" type="date" id="end-date" name="end-date" value="2020-06-18" required>
             </div>
-            <div>
-              <div>
-                <label for="adults-count">
-                  Взрослые:
-                </label>
-                <input type="number" id="adults-count" name="adults" value="2" min="1" max="100" required>
+            <div class="form-line">
+              <div class="line-div">
+                <label class="line-label" for="adults-count"> Взрослые: </label>
+                <input class="line-input" type="number" id="adults-count" name="adults" value="2" min="1" max="100" required>
               </div>
-              <div>
-                <label for="children-count">
-                  Дети:
-                </label>
-                <input type="number" id="children-count" name="children" value="1" min="1" max="100">
+              <div class="line-div">
+                <label class="line-label" for="children-count"> Дети: </label>
+                <input class="line-input" type="number" id="children-count" name="children" value="1" min="1" max="100">
               </div>
             </div>
-            <button type="submit">Найти</button>
+            <button class="submit-btn" type="submit">Найти</button>
           </form>
         </div>
 
-        <img src="" alt="Расположение гостиниц на карте">
+        <img class="map" src="" alt="Расположение гостиниц на карте">
 
       </section>
 
     </main>
 
-    <footer>
+    <footer class="footer">
 
-      <div>
-        <p>#VISITSEDONA</p>
-        <a href="tel:+7(495)495-49-54">+7(495)495-49-54</a>
+      <div class="footer-contacts">
+        <p class="contacts-text">#VISITSEDONA</p>
+        <a class="contacts-tel" href="tel:+7(495)495-49-54">+7(495)495-49-54</a>
       </div>
 
-      <div>
+      <div class="footer-socials">
         <a href="#"><img src="" alt="Иконка Твиттер"></a>
         <a href="#"><img src="" alt="Иконка Facebook"></a>
         <a href="#"><img src="" alt="Иконка YouTube"></a>
       </div>
 
-      <p>
-        <b>Вёрстка:</b>
-        <a href="https://github.com/vaivankov">Виталий Иваньков</a>
+      <p class="footer-author">
+        <b class="author-text">Вёрстка:</b>
+        <a class="author-name" href="https://github.com/vaivankov">Виталий Иваньков</a>
       </p>
 
     </footer>
