Добавлены стили body и header

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="header">
       <nav class="main-navigation">
         <ul class="navigation-list">
-          <li class="list-item-left">Информация</li>
-          <li class="list-item-left">Фото и видео</li>
-          <li class="navigation-logo"><p class="visually-hidden">Главная</p></li>
-          <li class="list-item-right">Карта штата</li>
-          <li class="list-item-right">Гостиницы</li>
+          <li class="list-item-left"><a href="#">Информация</a></li>
+          <li class="list-item-left"><a href="#">Фото и видео</a></li>
+          <li class="navigation-logo"><p class="visually-hidden"><a href="#">Главная</a></p></li>
+          <li class="list-item-right"><a href="#">Карта штата</a></li>
+          <li class="list-item-right"><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
