Свёрстан блок main-logo  на index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <ul class="navigation-list">
           <li class="list-item-left"><a href="#">Информация</a></li>
           <li class="list-item-left"><a href="#">Фото и видео</a></li>
-          <li class="navigation-logo"><p class="visually-hidden"><a href="#">Главная</a></p></li>
+          <li class="navigation-logo">
+            <p class="visually-hidden"><a href="#">Главная</a></p>
+          </li>
           <li class="list-item-right"><a href="#">Карта штата</a></li>
           <li class="list-item-right"><a href="#">Гостиницы</a></li>
         </ul>
@@ -31,8 +33,18 @@
 
       <section class="main-logo">
         <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
-        <img src=""
+        <img src="img/icon/welcome.png"
           alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
+        <div class="decorative-arrows">
+          <div class="arrows-wrapper">
+            <div class="arrows">
+              <div class="arrow-inner"></div>
+            </div>
+            <div class="arrows">
+              <div class="arrow-outer"></div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="main-features">
@@ -111,7 +123,8 @@
 
         <p class="hotels-title">Заинтересовались?</p>
 
-        <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне </p>
+        <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
+          гостиниц в Седоне </p>
 
         <button class="hotels-btn" type="button">Поиск гостиницы в Седоне</button>
 
@@ -128,7 +141,8 @@
             <div class="form-line">
               <div class="line-div">
                 <label class="line-label" for="adults-count"> Взрослые: </label>
-                <input class="line-input" type="number" id="adults-count" name="adults" value="2" min="1" max="100" required>
+                <input class="line-input" type="number" id="adults-count" name="adults" value="2" min="1" max="100"
+                  required>
               </div>
               <div class="line-div">
                 <label class="line-label" for="children-count"> Дети: </label>
