Свёрстан блок с заголовком к преимуществам на index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li class="list-item-left"><a href="#">Информация</a></li>
           <li class="list-item-left"><a href="#">Фото и видео</a></li>
           <li class="navigation-logo">
-            <p class="visually-hidden"><a href="#">Главная</a></p>
+            <p class="visually-hidden"><a href="index.html">Главная</a></p>
           </li>
           <li class="list-item-right"><a href="#">Карта штата</a></li>
           <li class="list-item-right"><a href="#">Гостиницы</a></li>
