Свёрстан блок с преимуществами 1 и 3  на index.html

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <div class="feature">
           <h3 class="visually-hidden">Преимущество №1</h3>
           <div class="feature-card">
-            <p class="card-title">Настоящий городок</p>
-            <p class="card-num">№1</p>
-            <p class="card-text">Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</p>
+            <div class="card-title">Настоящий<br>городок</div>
+            <div class="card-num">№1</div>
+            <div class="card-text">Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</div>
           </div>
           <div class="feature-img">
-            <img src="" alt="Фото кафе на территории Седоны">
+            <img src="img/main/photo-2.jpg" alt="Фото кафе на территории Седоны">
           </div>
         </div>
 
@@ -85,7 +85,7 @@
         <div class="feature">
           <h3 class="visually-hidden">Преимущество №2</h3>
           <div class="feature-img">
-            <img src="" alt="Фото Моста дьявола">
+            <img src="img/main/photo-1.jpg" alt="Фото Моста дьявола">
           </div>
           <div class="feature-card">
             <p class="card-title">Там есть<br>мост дьявола</p>
