Свёрстаны блоки с оставшимися  преимуществами

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 
         <div class="features-block">
           <div class="feature-card">
-            <img class="card-icon" src="" alt="Иконка в виде домика">
+            <img class="card-icon" height="80" width="80" src="img/icon/living.svg" alt="Иконка в виде домика">
             <p class="card-title">Жильё</p>
             <p class="card-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </div>
           <div class="feature-card">
-            <img class="card-icon" src="" alt="Иконка в виде бургера">
+            <img class="card-icon" height="80" width="80" src="img/icon/burger.svg" alt="Иконка в виде бургера">
             <p class="card-title">Еда</p>
             <p class="card-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
           <div class="feature-card">
-            <img class="card-icon" src="" alt="Иконка в виде подарочной коробки">
+            <img class="card-icon" height="80" width="80" src="img/icon/gift.svg" alt="Иконка в виде подарочной коробки">
             <p class="card-title">Сувениры</p>
             <p class="card-text">Не только китайского, но и местного производства!</p>
           </div>
