Добавлены стили для блока Выбор отеля

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <p class="card-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
           <div class="feature-card">
-            <img class="card-icon" height="80" width="80" src="img/icon/gift.svg" alt="Иконка в виде подарочной коробки">
+            <img class="card-icon" height="80" width="80" src="img/icon/gift.svg"
+              alt="Иконка в виде подарочной коробки">
             <p class="card-title">Сувениры</p>
             <p class="card-text">Не только китайского, но и местного производства!</p>
           </div>
@@ -128,13 +129,17 @@
 
         <button class="hotels-btn" type="button">Поиск гостиницы в Седоне</button>
 
+      </section>
+
+      <section class="main-map">
+
         <div class="form-wrapper">
           <form class="form" action="https://echo.htmlacademy.ru" method="POST">
             <div class="form-line">
               <label class="line-label" for="start-date"> Дата заезда: </label>
               <input class="line-input" type="date" id="start-date" name="start-date" value="2020-06-10" required>
             </div>
-            <div>
+            <div class="form-line">
               <label class="line-label" for="end-date"> Дата выезда: </label>
               <input class="line-input" type="date" id="end-date" name="end-date" value="2020-06-18" required>
             </div>
@@ -152,8 +157,6 @@
             <button class="submit-btn" type="submit">Найти</button>
           </form>
         </div>
-
-        <img class="map" src="" alt="Расположение гостиниц на карте">
 
       </section>
 
