--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
       </div>
 
       <div class="footer-socials">
-        <a href="#"><img src="" alt="Иконка Твиттер"></a>
-        <a href="#"><img src="" alt="Иконка Facebook"></a>
-        <a href="#"><img src="" alt="Иконка YouTube"></a>
+        <a href="#"><img height="20" width="20" src="img/icon/twitter.svg" alt="Иконка Твиттер"></a>
+        <a href="#"><img height="20" width="20" src="img/icon/facebook.svg" alt="Иконка Facebook"></a>
+        <a href="#"><img height="20" width="20" src="img/icon/youtube.svg" alt="Иконка YouTube"></a>
       </div>
 
       <p class="footer-author">
