Окончена стилизация footer

--- a/index.html
+++ b/index.html
@@ -166,17 +166,29 @@
 
       <div class="footer-contacts">
         <p class="contacts-text">#VISITSEDONA</p>
-        <a class="contacts-tel" href="tel:+7(495)495-49-54">+7(495)495-49-54</a>
+        <a class="contacts-tel" href="tel:+7(495)495-49-54">TEL: +7(495)495-49-54</a>
       </div>
 
       <div class="footer-socials">
-        <a href="#"><img height="20" width="20" src="img/icon/twitter.svg" alt="Иконка Твиттер"></a>
-        <a href="#"><img height="20" width="20" src="img/icon/facebook.svg" alt="Иконка Facebook"></a>
-        <a href="#"><img height="20" width="20" src="img/icon/youtube.svg" alt="Иконка YouTube"></a>
+        <a href="#">
+          <div class="social-link">
+            <img height="48" width="48" src="img/icon/twitter.svg" alt="Иконка Твиттер">
+          </div>
+        </a>
+        <a href="#">
+          <div class="social-link">
+            <img height="68" width="48" src="img/icon/facebook.svg" alt="Иконка Facebook">
+          </div>
+        </a>
+        <a href="#">
+          <div class="social-link">
+            <img height="48" width="68" src="img/icon/youtube.svg" alt="Иконка YouTube">
+          </div>
+        </a>
       </div>
 
       <p class="footer-author">
-        <b class="author-text">Вёрстка:</b>
+        <p class="author-text">Вёрстка:</p><br>
         <a class="author-name" href="https://github.com/vaivankov">Виталий Иваньков</a>
       </p>
 
