--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
   </div>
 
   <!-- <script src="js/func__.js"></script> -->
+  <script src="js/func__toggleModalWindow.js"></script>
   <script src="js/variables.js"></script>
   <script src="js/handlers.js"></script>
 
