Добавлена анимация появления/исчезновения модального окна

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <section class="main-map">
 
         <div class="form-wrapper">
-          <form class="form" action="https://echo.htmlacademy.ru" method="POST">
+          <form class="form" style="display:block;opacity: 1;" action="https://echo.htmlacademy.ru" method="POST">
             <div class="form-line">
               <label class="line-label" for="start-date"> Дата заезда: </label>
               <input class="line-input" type="date" id="start-date" name="start-date" value="2020-06-10" required>
