Добавлены стили состояний наведение/нажатие

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
         <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
           гостиниц в Седоне </p>
 
-        <button class="hotels-btn" type="button">Поиск гостиницы в Седоне</button>
+        <button class="hotels-btn" type="button">
+          <p> Поиск гостиницы в Седоне </p>
+        </button>
 
       </section>
 
@@ -154,7 +156,9 @@
                 <input class="line-input" type="number" id="children-count" name="children" value="1" min="1" max="100">
               </div>
             </div>
-            <button class="submit-btn" type="submit">Найти</button>
+            <button class="submit-btn" type="submit">
+              <p> Найти </p>
+            </button>
           </form>
         </div>
 
@@ -172,25 +176,40 @@
       <div class="footer-socials">
         <a href="#">
           <div class="social-link">
-            <img height="48" width="48" src="img/icon/twitter.svg" alt="Иконка Твиттер">
+            <svg height="48" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" alt="Иконка Твиттер">
+              <defs />
+              <path class="path-background"
+                d="M512 97c-19 9-39 14-60 17 21-13 38-34 46-58-21 12-43 20-67 25a105 105 0 00-179 96c-87-4-164-46-216-110a106 106 0 0032 140c-17 0-34-5-48-13v2c0 51 37 93 85 103a105 105 0 01-48 1c14 42 52 73 98 74A211 211 0 010 417c46 30 102 47 161 47a297 297 0 00298-312c21-15 39-34 53-55z" />
+            </svg>
           </div>
         </a>
         <a href="#">
           <div class="social-link">
-            <img height="68" width="48" src="img/icon/facebook.svg" alt="Иконка Facebook">
+            <svg height="68" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" alt="Иконка Facebook">
+              <defs />
+              <path class="path-background"
+                d="M320 85h64c6 0 11-4 11-10V11c0-6-5-11-11-11h-64c-65 0-117 53-117 117v75h-75c-6 0-11 5-11 11v64c0 6 5 10 11 10h75v224c0 6 4 11 10 11h64c6 0 11-5 11-11V277h75c4 0 8-3 10-7l21-64a11 11 0 00-10-14h-96v-75c0-17 14-32 32-32z" />
+            </svg>
           </div>
         </a>
         <a href="#">
           <div class="social-link">
-            <img height="48" width="68" src="img/icon/youtube.svg" alt="Иконка YouTube">
+            <svg height="48" width="68" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 48" alt="Иконка YouTube">
+              <defs />
+              <path class="path-background"
+                d="M66.5 7.7c-.8-2.9-2.5-5.4-5.4-6.2C55.8.1 34 0 34 0S12.2.1 6.9 1.6c-3 .7-4.6 3.2-5.4 6.1a89.6 89.6 0 000 32.5c.8 3 2.5 5.5 5.4 6.3C12.2 47.9 34 48 34 48s21.8-.1 27.1-1.6c3-.7 4.6-3.2 5.4-6.1C68 35 68 24 68 24s0-11-1.5-16.3z" />
+              <path class="path-hole" d="M45 24L27 14v20" />
+            </svg>
           </div>
         </a>
       </div>
 
-      <p class="footer-author">
-        <p class="author-text">Вёрстка:</p><br>
-        <a class="author-name" href="https://github.com/vaivankov">Виталий Иваньков</a>
-      </p>
+      <div class="footer-author">
+        <a class="author-link" href="https://github.com/vaivankov">
+          <p class="author-text">Вёрстка:</p><br>
+          <p class="author-name">Виталий Иваньков</p>
+        </a>
+      </div>
 
     </footer>
 
