Добавлена функция, устанавливающая дату заезда/выезда

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
   </div>
 
   <!-- <script src="js/func__.js"></script> -->
+  <script src="js/func__setTodaysDate.js"></script>
   <script src="js/func__toggleModalWindow.js"></script>
   <script src="js/variables.js"></script>
   <script src="js/handlers.js"></script>
