Добавлена страница hotels.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="visually-hidden"><a href="index.html">Главная</a></p>
           </li>
           <li class="list-item-right"><a href="#">Карта штата</a></li>
-          <li class="list-item-right"><a href="#">Гостиницы</a></li>
+          <li class="list-item-right"><a href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
